# astro-cli

./: .dockerignore  .drone.yml  .env  .gitignore  .gitmodules  .golangci.yml  .goreleaser-release.yml  .goreleaser.yml  .mockery.yaml  .pre-commit-config.yaml  .yamllint  BREAKING_CHANGES.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  Dockerfile.sql_cli  Gopkg.toml  LICENSE  Makefile  README.md  airflow.db  airflow_settings.yaml  astro_values.yaml  codecov.yml  docker-compose.yaml  fmtcoverage.html  go.mod  go.sum  godownloader.sh  main.go  prek.toml  tools.go
.circleci/: circle.yml  config.yml  continue_config.yml  next_version.py
.github/: CODEOWNERS  pull_request_template.md
agent/: package.json  tsconfig.json
airflow/: Dockerfile  airflow.go  airflow_test.go  conflict-check.Dockerfile  constants.go  container.go  container_runtime.go  container_runtime_test.go  container_test.go  docker-compose.yaml  docker.go  docker_image.go  docker_image_test.go  docker_registry.go  docker_registry_test.go  docker_runtime.go  docker_test.go  dockerfile_gen.go  dockerfile_gen_test.go  errors.go  files.go  health_check.go  health_check_test.go  hooks.go  local.go  local_test.go  podman.go  podman_bindings.go  podman_image.go  podman_image_test.go  podman_registry.go  podman_registry_test.go  podman_runtime.go  podman_test.go  project.go  project_test.go  proxy_darwin.go  proxy_other.go  run_local_dag.py  runtime_templates.go  (+10 more)
airflow-client/: airflow-client.go  airflow-client_test.go  types.go
test/integration-test/: dev_test.py  pyproject.toml
(+879 files in other folders)
