[tool.poetry]
name = "integration-test"
version = "0.1.0"
description = "Astro CLI integration Tests"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "8.3.4"
docker = "7.1.0"
pyyaml = "6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
